--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -370,16 +370,7 @@
          appended after the path string to interpret coordinates in dp instead of px units.
          Note that a physical cutout should be configured in pixels for the best results.
          -->
-    <string translatable="false" name="config_mainBuiltInDisplayCutout">
-        M -185,0
-        H 183.34
-        c -9.77.44 -19.57,0.08 -29.28,1.24 -20.33,1.14 -41.18,5.17 -58.62,16.24
-        C 78.54,28.27,66,44.26,52,58.29 
-        a 72.73,72.73,0,0,1 -38.29,19.58
-        c -16.53,2.51 -34,1 -49.09 -6.62 -9.85 -4.62 -17.88 -12.24 -25.21 -20.18 -10.46 -11.27 -20.9 -22.75 -33.53 -31.66 -11.49 -8 -24.9 -12.78 -38.53 -15.42
-        C -149.92,0.81,-167.51.39,-185,0
-        Z
-    </string>
+    <string name="config_mainBuiltInDisplayCutout">M -40,0 L -8,9 L 8,9 L 40,0 Z</string>
     <bool name="config_powerDecoupleAutoSuspendModeFromDisplay">true</bool>
     <!-- Height of the status bar -->
     <dimen name="status_bar_height_portrait">80px</dimen>
